[tool.poetry]
name = "2018-09-18-bf-geo-trace-route"
version = "0.1.0"
description = ""
authors = [ "Beta Faccion <betafcc@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.7"
ipyleaflet = "^0.9.0"
geoip2 = "^2.9"

[tool.poetry.dev-dependencies]
tornado = "<5"
ipython = "^6.5"
jupyterlab = "^0.34.10"

[tool.pandora]
name = "Geo Trace Route"
date = 2018-09-18T10:40:01.447Z
